--- a/public/new-calling.html
+++ b/public/new-calling.html
@@ -1057,8 +1057,8 @@
                 localStream = await navigator.mediaDevices.getUserMedia(constraints);
 
                 // Verify we got the expected tracks
-                // const audioTracks = localStream.getAudioTracks();
-                // const videoTracks = localStream.getVideoTracks();
+                 const audioTracks = localStream.getAudioTracks();
+                 const videoTracks = localStream.getVideoTracks();
 
                 if (audioTracks.length === 0) {
                     throw new Error('No audio track obtained from getUserMedia');
