--- a/public/new-calling.html
+++ b/public/new-calling.html
@@ -1086,8 +1086,8 @@
                 }
 
                 // Test audio tracks
-                const audioTracks = localStream.getAudioTracks();
-                const videoTracks = localStream.getVideoTracks();
+                //const audioTracks = localStream.getAudioTracks();
+                //const videoTracks = localStream.getVideoTracks();
                 log(`📊 Local stream: ${audioTracks.length} audio tracks, ${videoTracks.length} video tracks`);
 
                 audioTracks.forEach((track, index) => {
